--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Android TPC Connector/Android TPC Connector/bin/Debug/netstandard2.0/ref
 /Android TPC Connector/Android TPC Connector/bin
 /Android TPC Connector/Android TPC Connector.Android/bin
+com.dill.android_tpc_connector.apk
+.vs/
